# Smarm-robot-fleet-mangment

./: README.md
src/Qr_action/: package.xml  setup.cfg  setup.py
src/Qr_action/Qr_action/: Qr_client.py  Qr_server.py
src/goat_robo_discription/: CMakeLists.txt  package.xml
src/goat_robo_discription/config/: bridge_config_template.yaml  gz_bridge_config.yaml  robot1_bridge_config_template.yaml  robot2_bridge_config_template.yaml  robot3_bridge_config_template.yaml  robot4_bridge_config_template.yaml  robot5_bridge_config_template.yaml  robot6_bridge_config_template.yaml
src/goat_robo_discription/launch/: gazibo_goat.launch.py  gazibo_goat_spawn.launch.py  goat_localization_launch.py  goat_nav2_bringup_launch.py  goat_robo_sim.launch.py  goat_robo_sim_3dmap.launch.py  goat_robo_sim_nav2.launch.py  multi_robot_bringup.launch.py
src/goat_robo_discription/map/: my_map.pgm  my_map.yaml
src/goat_robo_discription/rviz/: robot_config.rviz  robot_config2.rviz
src/goat_robo_discription/urdf/: imu_sensor.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
src/goat_robo_discription/world/: my_world.sdf  my_world2.sdf  test_world.sdf  tugbot_warehouse (copy).sdf  tugbot_warehouse.sdf  warehouse_smaller.sdf  wrhouse_sl.sdf
src/micro_ros_custom_interfaces/: CMakeLists.txt  package.xml
src/micro_ros_custom_interfaces/msg/: MicrorosFeedback.msg  MicrorosLog.msg
src/micro_ros_custom_interfaces/srv/: MicrorosCancelGoal.srv
src/micro_ros_server/: package.xml  setup.cfg  setup.py
src/multi_robo_simulator/: package.xml  setup.cfg  setup.py
src/multi_robo_simulator/bkp/bkp1/: robot_spawner.py  server_gui.py
src/multi_robo_simulator/multi_robo_simulator/: esp_client_fake_1.py  esp_client_fake_2.py  esp_client_fake_3.py  esp_client_fake_4.py  esp_client_fake_5.py  esp_client_fake_6.py  robot_spawner.py  server_gui.py
src/my_robot_bringup2/: CMakeLists.txt  package.xml
src/my_robot_description2/: CMakeLists.txt  package.xml
src/swarm_interfaces/: CMakeLists.txt  package.xml
src/swarm_interfaces/msg/: PathArray.msg
(+43 files in other folders)
