<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_robo_simulator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="a93054223@gmail.com">asd</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Build dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>swarm_interfaces</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>PIL</exec_depend> <!-- for loading PGM files -->
  
  <!-- Optional for introspection or advanced use -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
